elasticsearch/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-elasticsearch
  namespace: db
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: elasticsearch.lan.repe.re
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elasticsearch
                port:
                  number: 9200
